Fix for blurry text rendering on scale transform

--- a/gamerTAG/src/components/addFriends/recommendedFriend.css
+++ b/gamerTAG/src/components/addFriends/recommendedFriend.css
@@ -3,6 +3,7 @@
   border: solid 2px #3871BB;
   margin: 10px;
   padding: 0px 5px;
+  will-change: contents;
 }
 
 .reccomendedFriend:hover{
