--- a/gamerTAG/src/components/friendsList/friend.css
+++ b/gamerTAG/src/components/friendsList/friend.css
@@ -2,8 +2,7 @@
     background: linear-gradient(#F3843E, #FAB433);
     border: solid 2px #3871BB;
     margin: 10px;
-    will-change: transform;
-    backface-visibility: hidden;
+    will-change: contents;
 }
 
 .friend:hover {
